[package]
name = "thundercollective"
version = "0.1.0"
edition = "2021"
description = "Ultrafast 2-node collectives for M3 Ultra + Thunderbolt 5 RDMA"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
